Frontend - Fixing styles in 375px resolution light a candle pages were too small

--- a/frontend/pages/light-a-candle/meditate/index.module.scss
+++ b/frontend/pages/light-a-candle/meditate/index.module.scss
@@ -11,6 +11,7 @@
     flex-direction: column;
     padding: 20% 12% 0 12%;
     height: 100%;
+    width: 100%;
     -webkit-animation: fadeIn ease 3s;
 }
 
@@ -191,7 +192,7 @@
 }
 
 .hidden {
-    display: none;
+    display: none !important;
     bottom: 100%;
 }
 
@@ -201,6 +202,8 @@
 
         > div {
             flex-wrap: wrap;
+            flex-direction: column;
+            align-items: center;
         }
     
         div {
